tests/cases/memory/errors/zone-destroy-required.ari
fn main() -> i64 {
  var zone = zone::create(64);
  return 0;
}
